--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -11,10 +11,7 @@
     "#### 03. Exploring Basically"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -50,10 +47,7 @@
     "    (lambda e: None)(err)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -80,10 +74,7 @@
     "print(f'Loding Exercise Dictionary Pickle[{dictfile}]')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -94,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2542, 372)\n",
-      "Exercise Transform Data(Tuple) Count: 2542\n"
+      "Raw Data Count(Exercises, Days): (2569, 377)\n",
+      "Exercise Transform Data(Tuple) Count: 2569\n"
      ]
     }
    ],
@@ -160,10 +151,7 @@
     "print(f'Exercise Transform Data(Tuple) Count: {len(restransform)}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -174,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 372\n"
+      "Exercise Days: 377\n"
      ]
     }
    ],
@@ -184,10 +172,7 @@
     "print(f'Exercise Days: {len(days)}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -199,8 +184,8 @@
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 35)\n",
-      "('Assisted Dips[Machine]', 68)\n",
-      "('Assisted Pull-Up[Machine]', 82)\n",
+      "('Assisted Dips[Machine]', 69)\n",
+      "('Assisted Pull-Up[Machine]', 83)\n",
       "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -215,10 +200,10 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 66)\n",
+      "('Chest Fly[Pec Deck Machine]', 67)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 111)\n",
+      "('Deadlift[Barbell]', 112)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -233,33 +218,33 @@
       "('Full Squat[Smith Machine]', 2)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Hack Squat[Machine]', 8)\n",
+      "('Hack Squat[Machine]', 10)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 24)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 29)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 98)\n",
-      "('Hip Adduction[Machine]', 88)\n",
+      "('Hip Adduction[Machine]', 89)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 51)\n",
+      "('Incline Bench Press[Machine]', 52)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 123)\n",
-      "('Leg Extension[Machine]', 72)\n",
-      "('Long Pull Row[Cable]', 88)\n",
+      "('Lat Pulldown[Machine]', 124)\n",
+      "('Leg Extension[Machine]', 73)\n",
+      "('Long Pull Row[Cable]', 89)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 136)\n",
+      "('Lying Leg Curls[Machine]', 138)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 24)\n",
+      "('Military Press[Smith Machine]', 25)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
@@ -268,21 +253,21 @@
       "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Plank', 104)\n",
-      "('Power Leg Press[Machine]', 73)\n",
+      "('Power Leg Press[Machine]', 74)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 42)\n",
-      "('Running', 66)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 43)\n",
+      "('Running', 70)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 94)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 88)\n",
-      "('Shoulder Press[Machine]', 93)\n",
+      "('Shoulder Press[Machine]', 94)\n",
       "('Side Lateral Raise[Dumbbell]', 89)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Side Lateral Raise[Machine]', 12)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
@@ -321,10 +306,7 @@
     "    print(d)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -335,116 +317,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 136)\n",
-      "('Lat Pulldown[Machine]', 123)\n",
-      "('Deadlift[Barbell]', 111)\n",
+      "('Lying Leg Curls[Machine]', 138)\n",
+      "('Lat Pulldown[Machine]', 124)\n",
+      "('Deadlift[Barbell]', 112)\n",
       "('Plank', 104)\n",
       "('Hip Abduction[Machine]', 98)\n",
+      "('Shoulder Press[Machine]', 94)\n",
       "('Seated Chest Press[Machine]', 94)\n",
-      "('Shoulder Press[Machine]', 93)\n",
       "('Side Lateral Raise[Dumbbell]', 89)\n",
-      "('Long Pull Row[Cable]', 88)\n",
-      "('Hip Adduction[Machine]', 88)\n",
+      "('Hip Adduction[Machine]', 89)\n",
+      "('Long Pull Row[Cable]', 89)\n",
       "('Seated Row[Machine]', 88)\n",
-      "('Assisted Pull-Up[Machine]', 82)\n",
+      "('Assisted Pull-Up[Machine]', 83)\n",
       "('Flat Bench Press[Barbell]', 75)\n",
-      "('Power Leg Press[Machine]', 73)\n",
-      "('Leg Extension[Machine]', 72)\n",
-      "('Assisted Dips[Machine]', 68)\n",
-      "('Running', 66)\n",
-      "('Chest Fly[Pec Deck Machine]', 66)\n",
+      "('Power Leg Press[Machine]', 74)\n",
+      "('Leg Extension[Machine]', 73)\n",
+      "('Running', 70)\n",
+      "('Assisted Dips[Machine]', 69)\n",
+      "('Chest Fly[Pec Deck Machine]', 67)\n",
       "('Straight Arm Pulldown[Cable]', 59)\n",
-      "('Incline Bench Press[Machine]', 51)\n",
+      "('Incline Bench Press[Machine]', 52)\n",
       "('Back Extension', 45)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 42)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 43)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Arnold Press[Dumbbell]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Arnold Press[Dumbbell]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 29)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 24)\n",
-      "('Military Press[Smith Machine]', 24)\n",
+      "('Military Press[Smith Machine]', 25)\n",
       "('Wrist Roller', 22)\n",
-      "('Bent Over Row[Barbell]', 20)\n",
       "('Dips', 20)\n",
-      "('Split Squat[Smith Machine]', 19)\n",
+      "('Bent Over Row[Barbell]', 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
+      "('Split Squat[Smith Machine]', 19)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Push-Up', 12)\n",
+      "('Side Lateral Raise[Machine]', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Push-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Hack Squat[Machine]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Hack Squat[Machine]', 8)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Hip Thrust', 5)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Body-Weight Squat', 5)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Reverse Crunch', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Reverse Crunch', 4)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Dead Bug', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Walking', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Trx Lunge', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
       "('Biceps Curls[EZ Curl Bar]', 1)\n",
       "('Cross Lunges', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n"
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n"
      ]
     }
    ],
@@ -455,10 +437,7 @@
     "     print(d)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
