--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2569, 377)\n",
-      "Exercise Transform Data(Tuple) Count: 2569\n"
+      "Raw Data Count(Exercises, Days): (2609, 384)\n",
+      "Exercise Transform Data(Tuple) Count: 2609\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 377\n"
+      "Exercise Days: 384\n"
      ]
     }
    ],
@@ -183,9 +183,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('Anold Press[Dumbbell]', 1)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
-      "('Assisted Dips[Machine]', 69)\n",
-      "('Assisted Pull-Up[Machine]', 83)\n",
+      "('Assisted Dips[Machine]', 70)\n",
+      "('Assisted Pull-Up[Machine]', 85)\n",
       "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -200,14 +201,14 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 67)\n",
+      "('Chest Fly[Pec Deck Machine]', 69)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 112)\n",
+      "('Deadlift[Barbell]', 113)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Dips', 20)\n",
+      "('Dips', 21)\n",
       "('Face Pulls[Cable]', 1)\n",
       "('Flat Bench Press[Barbell]', 75)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
@@ -218,10 +219,10 @@
       "('Full Squat[Smith Machine]', 2)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Hack Squat[Machine]', 10)\n",
+      "('Hack Squat[Machine]', 16)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 29)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 36)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 98)\n",
@@ -232,17 +233,17 @@
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 52)\n",
+      "('Incline Bench Press[Machine]', 54)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 124)\n",
+      "('Lat Pulldown[Machine]', 126)\n",
       "('Leg Extension[Machine]', 73)\n",
-      "('Long Pull Row[Cable]', 89)\n",
+      "('Long Pull Row[Cable]', 91)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 138)\n",
+      "('Lying Leg Curls[Machine]', 139)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 25)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -258,16 +259,16 @@
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 43)\n",
-      "('Running', 70)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 45)\n",
+      "('Running', 76)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 94)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 88)\n",
-      "('Shoulder Press[Machine]', 94)\n",
-      "('Side Lateral Raise[Dumbbell]', 89)\n",
-      "('Side Lateral Raise[Machine]', 12)\n",
+      "('Shoulder Press[Machine]', 96)\n",
+      "('Side Lateral Raise[Dumbbell]', 90)\n",
+      "('Side Lateral Raise[Machine]', 13)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
@@ -317,115 +318,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 138)\n",
-      "('Lat Pulldown[Machine]', 124)\n",
-      "('Deadlift[Barbell]', 112)\n",
+      "('Lying Leg Curls[Machine]', 139)\n",
+      "('Lat Pulldown[Machine]', 126)\n",
+      "('Deadlift[Barbell]', 113)\n",
       "('Plank', 104)\n",
       "('Hip Abduction[Machine]', 98)\n",
-      "('Shoulder Press[Machine]', 94)\n",
+      "('Shoulder Press[Machine]', 96)\n",
       "('Seated Chest Press[Machine]', 94)\n",
-      "('Side Lateral Raise[Dumbbell]', 89)\n",
+      "('Long Pull Row[Cable]', 91)\n",
+      "('Side Lateral Raise[Dumbbell]', 90)\n",
       "('Hip Adduction[Machine]', 89)\n",
-      "('Long Pull Row[Cable]', 89)\n",
       "('Seated Row[Machine]', 88)\n",
-      "('Assisted Pull-Up[Machine]', 83)\n",
+      "('Assisted Pull-Up[Machine]', 85)\n",
+      "('Running', 76)\n",
       "('Flat Bench Press[Barbell]', 75)\n",
       "('Power Leg Press[Machine]', 74)\n",
       "('Leg Extension[Machine]', 73)\n",
-      "('Running', 70)\n",
-      "('Assisted Dips[Machine]', 69)\n",
-      "('Chest Fly[Pec Deck Machine]', 67)\n",
+      "('Assisted Dips[Machine]', 70)\n",
+      "('Chest Fly[Pec Deck Machine]', 69)\n",
       "('Straight Arm Pulldown[Cable]', 59)\n",
-      "('Incline Bench Press[Machine]', 52)\n",
+      "('Incline Bench Press[Machine]', 54)\n",
       "('Back Extension', 45)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 43)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 45)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Wide Pulldown Rear[Machine]', 35)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 36)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 29)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Military Press[Smith Machine]', 25)\n",
       "('Wrist Roller', 22)\n",
-      "('Dips', 20)\n",
+      "('Dips', 21)\n",
       "('Bent Over Row[Barbell]', 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
       "('Split Squat[Smith Machine]', 19)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Hack Squat[Machine]', 16)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Side Lateral Raise[Machine]', 12)\n",
-      "('Pull-Up', 12)\n",
-      "('Push-Up', 12)\n",
+      "('Side Lateral Raise[Machine]', 13)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
+      "('Push-Up', 12)\n",
+      "('Pull-Up', 12)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Hack Squat[Machine]', 10)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Body-Weight Squat', 5)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Hip Thrust', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Hip Thrust', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('Reverse Crunch', 4)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Goblet Squat[Dumbbell]', 4)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
+      "('Trx Row', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Dead Bug', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
       "('Walking', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Trx Lunge', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
       "('One Arm Low Row[Machine]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
       "('Split Squat', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Anold Press[Dumbbell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Cable Chest Fly[Cable]', 1)\n"
      ]
     }
